Compile core